[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A tool for fetching PubMed papers from authors in the pharmaceutical industry."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# This line tells Poetry where your Python code is located
packages = [{include = "get_papers_list"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
typer = {extras = ["rich"], version = "^0.12.3"}
pydantic = "^2.7.1"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"